--- a/src/assets/test.css
+++ b/src/assets/test.css
@@ -1,5 +1,5 @@
 .new-test-content-row {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -16,9 +16,25 @@
     align-items: center;
 }
 
+.test-content-column {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 20px;
+}
+
 .timer {
     display: block;
     position: absolute;
     top: 0;
     right: 0;
+}
+
+.test-box {
+    background-color: #23272a !important;
+    color: white !important;
+    width: 400px;
+    height: 250px;
 }
